Update about page

--- a/_includes/people_horizontal.html
+++ b/_includes/people_horizontal.html
@@ -7,8 +7,9 @@
         </div>
         <div class="col-sm-6">        
           <div class="card-body">
-            <h5 class="card-title text-right">{{ include.name }}</h5>
-            <p class="card-text text-right">{{ include.affiliation }}</p>                                                  
+            <h5 class="card-title text-center">{{ include.name }}</h5>
+            <p class="card-text text-center">{{ include.position }}</p>  
+            <p class="card-text text-center">{{ include.affiliation }}</p>                                                 
           </div>
         </div>
       </div>
